--- a/BudgetPlan2019/tax_vis.ipynb
+++ b/BudgetPlan2019/tax_vis.ipynb
@@ -62,7 +62,7 @@
     "plt.plot(x, y1,label='2012-2017')\n",
     "plt.plot(x, y2,label='2017-2018')\n",
     "plt.plot(x, y3,label='2018-2019')\n",
-    "plt.ylim(0, 100000)   #限制y的范围\n",
+    "plt.ylim(0, 100000) ,
     "fig_size = plt.rcParams[\"figure.figsize\"]\n",
     "# Prints: [8.0, 6.0]\n",
     "print(\"Current size:\", fig_size)\n",
@@ -74,8 +74,8 @@
     "plt.ylabel(\"Tax to pay (HKD)\")\n",
     "plt.title(\"How much tax do you need to pay?\\n from 2012 to 2019\\n\")\n",
     "plt.legend()\n",
-    "# plt.show()\n",
-    "plt.savefig('data.png') \n",
+    "plt.show()\n",
+    "# plt.savefig('data.png') \n",
     "print(\"Done!\")\n",
     "plt.close()"
    ]
