--- a/BudgetPlan2019/taxamount.ipynb
+++ b/BudgetPlan2019/taxamount.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current size: [14.0, 8.0]\n",
+      "Current size: [14.0, 8.0]\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -47,7 +57,7 @@
     "y2 = np.array([triangle_wave(t, 45000, 90000, 180000, 225000, 355000, 0.02, 0.07, 0.12, 0.17) for t in x])\n",
     "y3 = np.array([triangle_wave2(t, 50000, 100000, 200000, 250000, 400000, 450000, 650000, 0.02, 0.06, 0.1, 0.14, 0.17) for t in x])\n",
     "\n",
-    "plt.style.use('dark_background')\n",
+    "# plt.style.use('dark_background')\n",
     "plt.rcParams.update({'font.size': 16})\n",
     "plt.figure()\n",
     "plt.plot(x, y1,'xkcd:sky blue',label='2012-2017')\n",
@@ -65,7 +75,7 @@
     "plt.title(\"\\nHow much tax do you need to pay?\\n from 2012 to 2019\\n\")\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "# plt.savefig('tax_dark.png') \n",
+    "# plt.savefig('tax_light.png') \n",
     "print(\"Done!\")\n",
     "plt.close()"
    ]
