change to show plot

--- a/BudgetPlan2019/tax_v2.ipynb
+++ b/BudgetPlan2019/tax_v2.ipynb
@@ -100,8 +100,8 @@
     "plt.ylabel(\"\\nIncome Tax to pay (HKD in thousand)\")\n",
     "plt.title(\"\\nIncome Tax Payable Amount\\n over past 7 years\\n\")\n",
     "plt.legend()\n",
-    "# plt.show()\n",
-    "plt.savefig('tax_light.png') \n",
+    "plt.show()\n",
+    "# plt.savefig('tax_light.png') \n",
     "print(\"Done!\")\n",
     "plt.close()"
    ]
